debug to true for AOP stuff
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1372 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -627,7 +627,7 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <debug>false</debug>
+                    <debug>true</debug>
                     <optimize>true</optimize>
                     <source>${maven.compile.sourceLevel}</source>
                     <target>${maven.compile.targetLevel}</target>
