Add util bundle, needed for tests
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1375 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.integration.jpa/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.integration.jpa/pom.xml
@@ -128,6 +128,11 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.core.util</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.test</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
