worked on fine-grained security concept
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1407 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.lib/pom.xml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.lib/pom.xml
@@ -60,7 +60,6 @@
 					</warnings>
 					<allowSourcePathOverlap>true</allowSourcePathOverlap>
                     <keepAs3Metadatas>
-                        <keepAs3Metadata>Protected</keepAs3Metadata>
                         <keepAs3Metadata>Bindable</keepAs3Metadata>
                         <keepAs3Metadata>Managed</keepAs3Metadata>
                         <keepAs3Metadata>ChangeEvent</keepAs3Metadata>
@@ -74,7 +73,9 @@
                         <keepAs3Metadata>Out</keepAs3Metadata>
                         <keepAs3Metadata>Observer</keepAs3Metadata>
                         <keepAs3Metadata>ManagedEvent</keepAs3Metadata>
+                        <keepAs3Metadata>PostConstruct</keepAs3Metadata>
                         <keepAs3Metadata>Destroy</keepAs3Metadata>
+                        <keepAs3Metadata>Protected</keepAs3Metadata>
                     </keepAs3Metadatas>
 					<output>${project.build.directory}/${project.artifactId}.swc</output>
 				</configuration>
