--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/pom.xml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/pom.xml
@@ -49,8 +49,9 @@
 					<incremental>true</incremental>
 					<configurationReport>false</configurationReport>
 					<sourcePaths>
+                        <path>${basedir}/src/main/flex</path>
 						<path>${basedir}/src/main/resources</path>
-						<path>${basedir}/src/main/flex</path>
+                        <path>${basedir}/src/main/resources/assets/locale/{locale}</path>
 					</sourcePaths>
 					<services>${basedir}/src/main/resources/flex/services-config.xml</services>
 					<contextRoot>openwms</contextRoot>
@@ -59,6 +60,15 @@
 						<arrayTostringChanges>true</arrayTostringChanges>
 						<duplicateArgumentNames>false</duplicateArgumentNames>
 					</warnings>
+                    <resourceBundlePath>${basedir}/src/main/resources/assets/locale/{locale}</resourceBundlePath>
+                    <locales>
+                        <locale>en_US</locale>
+                        <locale>de_DE</locale>
+                    </locales>
+                    <compiledLocales>
+                        <locale>en_US</locale>
+                        <locale>de_DE</locale>
+                    </compiledLocales>
 					<allowSourcePathOverlap>true</allowSourcePathOverlap>
                     <keepAs3Metadatas>
                         <keepAs3Metadata>Bindable</keepAs3Metadata>
