Worked on i18n and security
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1428 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.util/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.util/pom.xml
@@ -53,14 +53,24 @@
     <dependencies>
         <!-- Spring Framework -->
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>org.springframework.spring-library</artifactId>
+            <type>libd</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>com.springsource.org.apache.commons.lang</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>org.springframework.spring-library</artifactId>
-            <type>libd</type>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>com.springsource.org.apache.commons.collections</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>com.springsource.org.apache.commons.beanutils</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
