activated all profile in all toplevel pom files
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1437 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/pom.xml
+++ b/org.openwms/trunk/org.openwms.app/pom.xml
@@ -59,6 +59,9 @@
     <profiles>
         <profile>
             <id>all</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <modules>
                 <module>org.openwms.app.par</module>
                 <module>org.openwms.app.plan</module>
