--- a/org.openwms/trunk/org.openwms.core/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/pom.xml
@@ -57,6 +57,9 @@
     <profiles>
         <profile>
             <id>all</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <modules>
                 <module>org.openwms.core.domain</module>
                 <module>org.openwms.core.domain.as</module>
