--- a/org.openwms/trunk/org.openwms.common/pom.xml
+++ b/org.openwms/trunk/org.openwms.common/pom.xml
@@ -57,6 +57,9 @@
     <profiles>
         <profile>
             <id>all</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <modules>
                 <module>org.openwms.common.domain</module>
                 <module>org.openwms.common.domain.as</module>
@@ -67,7 +70,6 @@
                 <module>org.openwms.common.service.api</module>
                 <module>org.openwms.common.service.spring</module>
                 <module>org.openwms.common.util</module>
-                <!-- module>org.openwms.common.infrastructure.engine</module-->
             </modules>
         </profile>
         <profile>
@@ -82,7 +84,6 @@
                 <module>org.openwms.common.service.api</module>
                 <module>org.openwms.common.service.spring</module>
                 <module>org.openwms.common.util</module>
-                <!-- module>org.openwms.common.infrastructure.engine</module-->
             </modules>
         </profile>
     </profiles>
