--- a/org.openwms/trunk/org.openwms.tms/pom.xml
+++ b/org.openwms/trunk/org.openwms.tms/pom.xml
@@ -58,6 +58,9 @@
     <profiles>
         <profile>
             <id>all</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <modules>
                 <module>org.openwms.tms.domain</module>
                 <module>org.openwms.tms.domain.as</module>
