added plugin repos to resolve swf
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1441 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -408,6 +408,38 @@
                 <enabled>true</enabled>
             </snapshots>
         </pluginRepository>
+        <pluginRepository>
+            <id>sonatype-public</id>
+            <url>http://repository.sonatype.org/content/groups/flexgroup</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+            <id>org.openwms.release</id>
+            <name>OpenWMS.org Sourceforge Maven Repository Releases</name>
+            <url>http://openwms2005.sourceforge.net/repo/releases</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+            <id>org.openwms.snapshots</id>
+            <name>OpenWMS.org Sourceforge Maven Repository Snapshots</name>
+            <url>http://openwms2005.sourceforge.net/repo/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
     </pluginRepositories>
     <repositories>
         <repository>
