Added as3commons release repo to the list of pluginRepositories to work with Maven3
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1443 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -441,13 +441,23 @@
             </snapshots>
         </pluginRepository>
         <pluginRepository>
-            <id>as3commons</id>
+            <id>yoolab.org-snapshots</id>
             <url>http://dev.yoolab.org/maven/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+            <id>yoolab.org-releases</id>
+            <url>http://dev.yoolab.org/maven/content/repositories/releases</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
             <snapshots>
-                <enabled>true</enabled>
+                <enabled>false</enabled>
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
