--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.flex.module/pom.xml
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.flex.module/pom.xml
@@ -38,8 +38,8 @@
 	</properties>
 	<build>
 		<finalName>${project.artifactId}-${project.version}</finalName>
-		<sourceDirectory>src/main/flex</sourceDirectory>
-		<testSourceDirectory>src/test/flex</testSourceDirectory>
+		<sourceDirectory>${project.basedir}/src/main/flex</sourceDirectory>
+		<testSourceDirectory>${project.basedir}/src/test/flex</testSourceDirectory>
 		<plugins>
 			<plugin>
 				<groupId>org.sonatype.flexmojos</groupId>
