Worked on PropertyScreen
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1465 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.domain.as/pom.xml
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.domain.as/pom.xml
@@ -39,6 +39,7 @@
 	<build>
 		<finalName>${project.artifactId}-${project.version}</finalName>
 		<sourceDirectory>${project.basedir}/src/main/flex</sourceDirectory>
+        <testSourceDirectory>${project.basedir}/src/test/flex</testSourceDirectory>
 		<plugins>
 			<plugin>
 				<groupId>org.sonatype.flexmojos</groupId>
