--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.service.spring/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.service.spring/pom.xml
@@ -110,10 +110,15 @@
             <scope>provided</scope>
         </dependency>
         
-        <!-- Test database driver -->
+        <!-- Test dependencies -->
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>com.springsource.org.hsqldb</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>com.springsource.org.apache.commons.lang</artifactId>
             <scope>test</scope>
         </dependency>
 
@@ -155,6 +160,11 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.integration.jpa</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.core.integration.file</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
