Worked on preferences stuff
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1482 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.configuration/src/org.openwms.core.infrastructure.configuration.properties
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.configuration/src/org.openwms.core.infrastructure.configuration.properties
@@ -18,6 +18,8 @@
 # Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 # 02110-1301 USA, or see the FSF site: http://www.fsf.org.
 #
+# Application properties
+application.initial.properties=file:initial-preferences.xml
 # JDBC options, used by the DataSource bean
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql:OPENWMS
