--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.domain.as/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.domain.as/pom.xml
@@ -108,7 +108,8 @@
 						<class>org.openwms.core.domain.*</class>
 					</includeJavaClasses>
                     <excludeJavaClasses>
-		    <exclude>**.package-info</exclude> 
+		                <exclude>**.package-info</exclude>
+                        <exclude>**.ObjectFactory</exclude> 
                         <class>org.openwms.core.domain.system.usermanagement.User$1</class>
                     </excludeJavaClasses>
 					<sourcePaths>
