Worked on preferences stuff
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1489 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/pom.xml
@@ -71,6 +71,7 @@
                 <module>org.openwms.core.integration</module>
                 <module>org.openwms.core.integration.eclipselink</module>
                 <module>org.openwms.core.integration.hibernate</module>
+                <module>org.openwms.core.integration.file</module>
                 <module>org.openwms.core.integration.jpa</module>
                 <module>org.openwms.core.service.api</module>
                 <module>org.openwms.core.service.spring</module>
@@ -91,6 +92,7 @@
                 <module>org.openwms.core.integration</module>
                 <module>org.openwms.core.integration.eclipselink</module>
                 <module>org.openwms.core.integration.hibernate</module>
+                <module>org.openwms.core.integration.file</module>
                 <module>org.openwms.core.integration.jpa</module>
                 <module>org.openwms.core.service.api</module>
                 <module>org.openwms.core.service.spring</module>
@@ -159,9 +161,14 @@
 	        </dependency>
 	        <dependency>
 	            <groupId>${project.groupId}</groupId>
-	            <artifactId>org.openwms.core.integration.jpa</artifactId>
+	            <artifactId>org.openwms.core.integration.file</artifactId>
 	            <version>${project.version}</version>
 	        </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>org.openwms.core.integration.jpa</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 	        <dependency>
 	            <groupId>${project.groupId}</groupId>
 	            <artifactId>org.openwms.core.service.api</artifactId>
