--- a/org.openwms/trunk/org.openwms.app/org.openwms.app.plan/pom.xml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.app.plan/pom.xml
@@ -230,6 +230,11 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.core.integration.file</artifactId>
+            <version>${core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.integration.jpa</artifactId>
             <version>${core.version}</version>
         </dependency>
