Worked on preferences and aop
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1500 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.service.spring/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.service.spring/pom.xml
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>com.springsource.org.apache.commons.lang</artifactId>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
 
         <!-- JPA Provider -->
