--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -741,6 +741,8 @@
                             <links>
                                 <link>http://static.springsource.org/spring/docs/${spring.version}/javadoc-api</link>
                                 <link>http://static.springsource.org/spring-security/site/docs/3.0.x/apidocs</link>
+                                <link>http://commons.apache.org/lang/api-2.5</link>
+                                <link>http://download.oracle.com/javaee/5/api/javax/persistence</link>
                             </links>
                             <excludePackageNames>org.openwms.web.flex.servlet</excludePackageNames>
                             <keywords>true</keywords>
@@ -756,6 +758,7 @@
                                 <artifactId>UmlGraph</artifactId>
                                 <version>4.6</version>
                             </docletArtifact>
+                            <show>private</show>
                             <additionalparam>
                                 -inferrel -inferdep -quiet -hide java.* -collpackages java.util.*
                                 -qualify
@@ -1029,7 +1032,7 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>com.springsource.org.apache.commons.lang</artifactId>
-                <version>2.4.0</version>
+                <version>2.5.0</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
