--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.test/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.test/pom.xml
@@ -56,6 +56,11 @@
             <artifactId>com.springsource.org.junit</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>  
+            <scope>compile</scope>
+        </dependency>
 
         <!-- Spring Framework -->
         <dependency>
