--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -1121,6 +1121,11 @@
                 <artifactId>com.springsource.org.junit</artifactId>
                 <version>${junit.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-all</artifactId>  
+                <version>1.9.0-rc1</version> 
+            </dependency>
 
             <!-- SLF4J API -->
             <dependency>
