--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.domain.as/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.domain.as/pom.xml
@@ -111,7 +111,7 @@
 		                <exclude>**.package-info</exclude>
                         <exclude>**.ObjectFactory</exclude> 
                         <class>org.openwms.core.domain.system.usermanagement.User$1</class>
-                        <class>org.openwms.core.domain.preferences.Preferences</class>
+                        <class>org.openwms.core.domain.system.usermanagement.Preference</class>
                     </excludeJavaClasses>
 					<sourcePaths>
 						<sourcePath>${project.basedir}/src/main/flex/</sourcePath>
