added test dependencies
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1566 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -1245,6 +1245,16 @@
             <artifactId>com.springsource.org.apache.log4j</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit</groupId>
+            <artifactId>com.springsource.org.junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>  
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
