Worked on secured passwords
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1577 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -761,8 +761,9 @@
                             <stylesheetfile>${basedir}/src/site/css/openwms-jdoc.css</stylesheetfile>
                             <verbose>true</verbose>
                             <aggregate>true</aggregate>
-                            <doclet>gr.spinellis.umlgraph.doclet.UmlGraphDoc</doclet>
+                            <doclet>org.umlgraph.doclet.UmlGraph</doclet>
                             <!-- 
+                            <doclet>gr.spinellis.umlgraph.doclet.UmlGraphDoc</doclet>
                             <docletArtifact>
                                 <groupId>gr.spinellis</groupId>
                                 <artifactId>UmlGraph</artifactId>
