Worked on secured passwords
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1578 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -761,27 +761,26 @@
                             <stylesheetfile>${basedir}/src/site/css/openwms-jdoc.css</stylesheetfile>
                             <verbose>true</verbose>
                             <aggregate>true</aggregate>
-                            <doclet>org.umlgraph.doclet.UmlGraph</doclet>
-                            <!-- 
                             <doclet>gr.spinellis.umlgraph.doclet.UmlGraphDoc</doclet>
                             <docletArtifact>
                                 <groupId>gr.spinellis</groupId>
                                 <artifactId>UmlGraph</artifactId>
                                 <version>4.6</version>
                             </docletArtifact>
-                             -->
-                            <docletArtifact>
-                                <groupId>org.umlgraph</groupId>
-                                <artifactId>doclet</artifactId>
-                                <version>5.1</version>
-                            </docletArtifact>
                             <show>private</show>
                             <additionalparam>
+                                -inferrel -inferdep -quiet -hide java.* -collpackages java.util.*
+                                -postfixpackage -nodefontname Tahoma -nodefontsize 9 -nodefontpackagesize 7 -outputencoding UTF-8
+                                -link
+                                http://static.springsource.org/spring/docs/${spring.version}/javadoc-api
+                            </additionalparam>
+                            <!-- additionalparam>
                                 -inferrel -inferdep -quiet -hide java.* -collpackages java.util.*
                                 -qualify
                                 -postfixpackage -nodefontname Tahoma -nodefontsize 9 -nodefontpackagesize 7
                                 -link
-                                http://static.springsource.org/spring/docs/${spring.version}/javadoc-api</additionalparam>
+                                http://static.springsource.org/spring/docs/${spring.version}/javadoc-api
+                            </additionalparam-->
                         </configuration>
                     </reportSet>
                 </reportSets>
