Worked on secured passwords
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1580 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -770,7 +770,7 @@
                             <show>private</show>
                             <additionalparam>
                                 -inferrel -inferdep -quiet -hide java.* -collpackages java.util.*
-                                -postfixpackage -nodefontname Tahoma -dotexecutable /usr/local/bin/dot -nodefontsize 9 -nodefontpackagesize 7 -outputencoding UTF-8
+                                -postfixpackage -nodefontname Tahoma -nodefontsize 9 -nodefontpackagesize 7 -outputencoding UTF-8
                                 -link
                                 http://static.springsource.org/spring/docs/${spring.version}/javadoc-api
                             </additionalparam>
